fix(ui5-popover): correct opacity (#9839)
The background of the modal popover was black which made the context page not visible.
So opacity was added to grey out the background

Fixes: #9823

--- a/packages/main/src/themes/Popover.css
+++ b/packages/main/src/themes/Popover.css
@@ -92,6 +92,7 @@
 
 :host([modal])::backdrop {
 	background-color: var(--_ui5_popup_block_layer_background);
+	opacity: var(--_ui5_popup_block_layer_opacity);
 }
 
 :host([modal]) .ui5-block-layer {
